[fix] opencar: baselines partagées (liste BO visible), édition depuis la liste, clavier thématiques

--- a/open.site/web/themes/custom/gentil_claro/sass/_common.scss
+++ b/open.site/web/themes/custom/gentil_claro/sass/_common.scss
@@ -363,3 +363,7 @@ a:focus {
 .gntl-offcanvas-menu .item-list ul li, .gntl-offcanvas-menu .menu-item {
   list-style: none;
 }
+
+section.oc-front-section.oc-front-articles {
+  background-color: var(--oc-surface);
+}
